--- a/MVVM/View/CadastrarPessoa.xaml
+++ b/MVVM/View/CadastrarPessoa.xaml
@@ -12,16 +12,22 @@
                 <ColumnDefinition/>
                 <ColumnDefinition/>
             </Grid.ColumnDefinitions>
-            <StackPanel Grid.Column="0" Margin="6" Orientation="Vertical">
-                <Label Content="Nome" />
-                <TextBox Text="{Binding PessoaEdit.Nome}" Name="Nome" Width="250" Height="20" HorizontalAlignment="Left" Margin="0,0,0,20"/>
-                <Label Content="CPF" />
-                <TextBox Text="{Binding PessoaEdit.Cpf}" Name="Cpf" Width="250" Height="20" HorizontalAlignment="Left" Margin="0,0,0,20"/>
-                <Label Content="Endereço" />
-                <TextBox Text="{Binding PessoaEdit.Endereco}" Name="Endereco" Width="250" Height="20" HorizontalAlignment="Left" Margin="0,0,0,20"/>
+            <Grid.RowDefinitions>
+                <RowDefinition/>
+                <RowDefinition/>
+            </Grid.RowDefinitions>
 
-                <Button Width="150" Height="50"
-                    Margin="0,0,0,0"
+            <StackPanel Grid.Column="0" Grid.Row="1" Margin="6" Orientation="Vertical">
+                <Label Content="Nome" />
+                <TextBox Text="{Binding PessoaEdit.Nome}" x:Name="Nome" Width="250" Height="20" HorizontalAlignment="Left" Margin="0,0,0,20"/>
+                <Label Content="CPF" />
+                <TextBox Text="{Binding PessoaEdit.Cpf}" x:Name="Cpf" Width="250" Height="20" HorizontalAlignment="Left" Margin="0,0,0,20"/>
+                <Label Content="Endereço" />
+                <TextBox Text="{Binding PessoaEdit.Endereco}" x:Name="Endereco" Width="250" Height="20" HorizontalAlignment="Left" Margin="0,0,0,20"/>
+
+                <Button Width="150" 
+                        Height="50"
+                        Margin="0,0,0,0"
                         Cursor="Hand"
                         CommandParameter="{Binding}"
                         Command="{Binding Novo}">
@@ -43,25 +49,39 @@
                                    Margin="0,5,5,5"
                                    HorizontalAlignment="Right"/>
                         </StackPanel>
+
                     </Grid>
                 </Button>
-
-
             </StackPanel>
-
-            <DataGrid Grid.Column="1" ItemsSource="{Binding Pessoas}"
+            <StackPanel Grid.Column="1" Grid.Row="0" Orientation="Horizontal">
+                <Button Margin="3"
+                        Padding="3"
+                        CommandParameter="{Binding}"
+                        Command="{Binding Editar}"
+                        Content="Editar" Background="#FFC5C6CB"/>
+                <Button Margin="3" Padding="3" 
+                        CommandParameter="{Binding}"
+                        Command="{Binding Deletar}"
+                        Content="Deletar" Background="#FFFB0B0B"/>
+            </StackPanel>
+            
+            <ScrollViewer Grid.Column="1"
+                          Grid.Row="1"
+                          HorizontalScrollBarVisibility="Visible"
+                          VerticalScrollBarVisibility="Visible" Grid.ColumnSpan="2">
+                <DataGrid Grid.Column="1" ItemsSource="{Binding Pessoas}"
                       AutoGenerateColumns="False"
                       IsReadOnly="True"
                       Name="datagridPessoas"
-                      SelectedItem="{Binding PessoaSelecionado}">
-                <DataGrid.Columns>
-                    <DataGridTextColumn Header="Id" Binding="{Binding Id}"/>
-                    <DataGridTextColumn Header="Nome" Binding="{Binding Nome}"/>
-                    <DataGridTextColumn Header="Cpf" Binding="{Binding Cpf}"/>
-                    <DataGridTextColumn Header="Endereço" Binding="{Binding Endereco}"/>
-                </DataGrid.Columns>
-            </DataGrid>
-
+                      SelectedItem="{Binding PessoasSelecionado}">
+                    <DataGrid.Columns>
+                        <DataGridTextColumn Header="Id" Binding="{Binding Id}"/>
+                        <DataGridTextColumn Header="Nome" Binding="{Binding Nome}"/>
+                        <DataGridTextColumn Header="Cpf" Binding="{Binding Cpf}"/>
+                        <DataGridTextColumn Header="Endereço" Binding="{Binding Endereco}"/>
+                    </DataGrid.Columns>
+                </DataGrid>
+            </ScrollViewer>
 
         </Grid>
     </StackPanel>
