--- a/MVVM/View/CadastrarPessoa.xaml
+++ b/MVVM/View/CadastrarPessoa.xaml
@@ -73,7 +73,7 @@
                       AutoGenerateColumns="False"
                       IsReadOnly="True"
                       Name="datagridPessoas"
-                      SelectedItem="{Binding PessoasSelecionado}">
+                      SelectedItem="{Binding PessoasSelecionado}" SelectionMode="Single">
                     <DataGrid.Columns>
                         <DataGridTextColumn Header="Id" Binding="{Binding Id}"/>
                         <DataGridTextColumn Header="Nome" Binding="{Binding Nome}"/>
