--- a/MVVM/View/CadastroProduto.xaml
+++ b/MVVM/View/CadastroProduto.xaml
@@ -74,7 +74,7 @@
                                 AutoGenerateColumns="False"
                                 IsReadOnly="True"
                                 Name="datagridProdutos"
-                                SelectedItem="{Binding ProdutoSelecionado}">
+                                SelectedItem="{Binding ProdutoSelecionado}" SelectionMode="Single">
                     <DataGrid.Columns>
                         <DataGridTextColumn Header="Id" Binding="{Binding Id}"/>
                         <DataGridTextColumn Header="Nome" Binding="{Binding Nome}"/>
