alterações junto com pessoal de curitiba

--- a/MVVM/View/CadastroProduto.xaml
+++ b/MVVM/View/CadastroProduto.xaml
@@ -85,6 +85,8 @@
             </StackPanel>
 
             <StackPanel Grid.Column="1" Grid.Row="0" Orientation="Horizontal">
+                <Button Margin="3" Padding="3" 
+                        Content="Novo" Click="Button_Click"/>
                 <Button Margin="3"
                         Padding="3"
                         CommandParameter="{Binding}"
