--- a/MVVM/View/CadastrarPessoa.xaml
+++ b/MVVM/View/CadastrarPessoa.xaml
@@ -24,47 +24,31 @@
                 <TextBox Text="{Binding PessoaEdit.Cpf}" x:Name="Cpf" Width="250" Height="20" HorizontalAlignment="Left" Margin="0,0,0,20"/>
                 <Label Content="Endereço" />
                 <TextBox Text="{Binding PessoaEdit.Endereco}" x:Name="Endereco" Width="250" Height="20" HorizontalAlignment="Left" Margin="0,0,0,20"/>
-
-                <Button Width="150" 
-                        Height="50"
-                        Margin="0,0,0,0"
+                <StackPanel Grid.Column="1" Grid.Row="0" Orientation="Horizontal">
+                    <Button Width="63" 
+                        Height="30"
+                        Margin="0 0 0 0"
                         Cursor="Hand"
                         CommandParameter="{Binding}"
-                        Command="{Binding Novo}">
-                    <Button.Background>
-                        <LinearGradientBrush StartPoint="0,0" EndPoint="1,2">
-                            <GradientStop Color="#FF5BFF5B" Offset="0.0"/>
-                            <GradientStop Color="#FF00B400" Offset="1"/>
-                        </LinearGradientBrush>
-                    </Button.Background>
-                    <Button.Clip>
-                        <RectangleGeometry RadiusX="10" RadiusY="10"
-                                       Rect="0,0,150,50"/>
-                    </Button.Clip>
-                    <Grid>
-                        <StackPanel>
-                            <TextBlock Text="Cadastrar"
-                                   Foreground="White"
-                                   FontSize="28"
-                                   Margin="0,5,5,5"
-                                   HorizontalAlignment="Right"/>
-                        </StackPanel>
-
-                    </Grid>
-                </Button>
-            </StackPanel>
-            <StackPanel Grid.Column="1" Grid.Row="0" Orientation="Horizontal">
-                <Button Margin="3"
+                        Command="{Binding Novo}"
+                        Content="Cadastrar" Background="#FF62C162"
+                       />
+                    <Button Margin="30 0 0 0"
+                        Width="63" 
+                        Height="30"
                         Padding="3"
                         CommandParameter="{Binding}"
                         Command="{Binding Editar}"
                         Content="Editar" Background="#FFC5C6CB"/>
-                <Button Margin="3" Padding="3" 
+                    <Button Margin="30 0 0 0"
+                        Width="63" 
+                        Height="30" 
+                        Padding="3" 
                         CommandParameter="{Binding}"
                         Command="{Binding Deletar}"
-                        Content="Deletar" Background="#FFFB0B0B"/>
+                        Content="Deletar" Background="#FFE68282"/>
+                </StackPanel>
             </StackPanel>
-            
             <ScrollViewer Grid.Column="1"
                           Grid.Row="1"
                           HorizontalScrollBarVisibility="Visible"
