Implementado a mascara do cpf e validações para o mesmo

--- a/MVVM/View/CadastrarPessoa.xaml
+++ b/MVVM/View/CadastrarPessoa.xaml
@@ -19,18 +19,18 @@
 
             <StackPanel Grid.Column="0" Grid.Row="1" Margin="6" Orientation="Vertical">
                 <Label Content="Nome" />
-                <TextBox Text="{Binding PessoaEdit.Nome}" x:Name="Nome" Width="250" Height="20" HorizontalAlignment="Left" Margin="0,0,0,20"/>
+                <TextBox Text="{Binding PessoaEdit.Nome}" x:Name="Nome" Width="250" Height="20" HorizontalAlignment="Left" Margin="0,0,0,20" ToolTip="Informe seu nome"/>
                 <Label Content="CPF" />
-                <TextBox Text="{Binding PessoaEdit.Cpf}" x:Name="Cpf" Width="250" Height="20" HorizontalAlignment="Left" Margin="0,0,0,20"/>
+                <TextBox Text="{Binding PessoaEdit.Cpf}" x:Name="Cpf" Width="250" Height="20" HorizontalAlignment="Left" Margin="0,0,0,20" LostFocus="Cpf_LostFocus" GotFocus="Cpf_GotFocus" ToolTip="Informe seu CPF contendo 11 dígitos"/>
                 <Label Content="Endereço" />
-                <TextBox Text="{Binding PessoaEdit.Endereco}" x:Name="Endereco" Width="250" Height="20" HorizontalAlignment="Left" Margin="0,0,0,20"/>
+                <TextBox Text="{Binding PessoaEdit.Endereco}" x:Name="Endereco" Width="250" Height="20" HorizontalAlignment="Left" Margin="0,0,0,20" ToolTip="Informe seu endereço"/>
                 <StackPanel Grid.Column="1" Grid.Row="0" Orientation="Horizontal">
                     <Button Width="63" 
                         Height="30"
                         Margin="0 0 0 0"
                         Cursor="Hand"
                         CommandParameter="{Binding}"
-                        Command="{Binding Novo}"
+                        Command="{Binding Novo}"                       
                         Content="Cadastrar" Background="#FF62C162"
                        />
                     <Button Margin="30 0 0 0"
