--- a/MVVM/View/CadastrarPessoa.xaml
+++ b/MVVM/View/CadastrarPessoa.xaml
@@ -4,8 +4,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:WpfApp3.MVVM.View"
-             mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
+             mc:Ignorable="d" d:DesignWidth="800" Height="532">
     <StackPanel Margin="20">
         <Grid Margin="0,0,10,0">
             <Grid.ColumnDefinitions>
@@ -64,27 +63,27 @@
                     </DataGrid.Columns>
                 </DataGrid>
             </ScrollViewer>
-            <DataGrid Grid.Column="1" Margin="0,146,0,214" Grid.Row="1"
+            <DataGrid Grid.Column="1" Margin="0,226,0,134" Grid.Row="1"
                       ItemsSource="{Binding Pedidos}"
                       AutoGenerateColumns="False"
                       IsReadOnly="True"
                       Name="datagridPed"
                       SelectedItem="{Binding PedidosSelecionado}" SelectionMode="Single" HorizontalAlignment="Left" Width="292">
                 <DataGrid.Columns>
-                    <DataGridTextColumn Header="Valor total" Binding="{Binding Id}"/>
-                    <DataGridTextColumn Header="Status" Binding="{Binding Id}"/>
-                    <DataGridTextColumn Header="Data venda" Binding="{Binding Id}"/>
-                    <DataGridTextColumn Header="Forma pagamento" Binding="{Binding Id}"/>
+                    <DataGridTextColumn Header="Data venda" Binding="{Binding }"/>
+                    <DataGridTextColumn Header="Valor total" Binding="{Binding }"/>
+                    <DataGridTextColumn Header="Forma pagamento" Binding="{Binding }"/>
+                    <DataGridTextColumn Header="Status" Binding="{Binding }"/>
                 </DataGrid.Columns>
             </DataGrid>
-            <StackPanel Grid.Column="1" Grid.Row="1" Orientation="Horizontal" Margin="0,260,31,146">
+            <StackPanel Grid.Row="1" Orientation="Horizontal" Margin="1,131,30,275" Grid.Column="1">
                 <Button Margin="22,19,0,19"
                         Width="63" 
                         Height="30"
                         Padding="3"
+                        Cursor="Hand"
                         CommandParameter="{Binding}"
                         Command="{Binding Editar}"
-                        
                         Content="Editar" Background="#FFC5C6CB"/>
                 <Button Margin="22 0 0 0"
                         Width="63" 
@@ -102,6 +101,37 @@
                         CommandParameter="{Binding}"
                         Command="{Binding NovoPedido}"
                         Content="Novo Pedido" Background="#FF4DCF5F"/>
+            </StackPanel>
+            <StackPanel Grid.Row="1" Orientation="Horizontal" Margin="6,335,57,71" Grid.Column="1">
+                <Button Margin="5,19,0,19"
+                    Width="63" 
+                    Height="30"
+                    Padding="3"
+                    Cursor="Hand"
+                    CommandParameter="{Binding}"
+                    Command="{Binding }"    
+                    Content="Entregues" Background="#FF4DCF5F"
+                    ToolTip="Filtrar Pedidos Entregues"
+                        />
+                <Button Margin="10,19,0,19"
+                    Width="80" 
+                    Height="30" 
+                    Padding="3" 
+                    Cursor="Hand"
+                    CommandParameter="{Binding}"
+                    Command="{Binding }"
+                    Content="Aguardando" Background="#FFE68282"
+                    ToolTip="Filtrar Pedidos Aguardando"
+                        />
+                <Button Margin="10 0 0 0"
+                    Width="85" 
+                    Height="30" 
+                    Padding="3" 
+                    Cursor="Hand"
+                    CommandParameter="{Binding}"
+                    Command="{Binding }"
+                    Content="Pagos" Background="#FFFF00"
+                    ToolTip="Filtrar Pedidos Pagos"/>
             </StackPanel>
         </Grid>
     </StackPanel>
