--- a/MVVM/View/CadastrarPessoa.xaml
+++ b/MVVM/View/CadastrarPessoa.xaml
@@ -2,6 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+             xmlns:i="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:WpfApp3.MVVM.View"
              mc:Ignorable="d" 
@@ -55,26 +56,35 @@
                           Height="136"
                           Width="292"
                       Name="datagridPessoas"
-                      SelectedItem="{Binding PessoasSelecionado}" SelectionMode="Single">
+                      SelectedItem="{Binding PessoasSelecionado}"
+                          SelectionMode="Single" >
                     <DataGrid.Columns>
                         <DataGridTextColumn Header="Id" Binding="{Binding Id}"/>
                         <DataGridTextColumn Header="Nome" Binding="{Binding Nome}"/>
                         <DataGridTextColumn Header="Cpf" Binding="{Binding Cpf}"/>
                         <DataGridTextColumn Header="Endereço" Binding="{Binding Endereco}"/>
                     </DataGrid.Columns>
+                    <i:Interaction.Triggers>
+                        <i:EventTrigger EventName="SelectionChanged">
+                            <i:InvokeCommandAction 
+                        CommandParameter="{Binding}"
+                                Command="{Binding SelecionarPessoaCommand}" />
+                        </i:EventTrigger>
+                    </i:Interaction.Triggers>
                 </DataGrid>
             </ScrollViewer>
             <DataGrid Grid.Column="1" Margin="0,146,0,214" Grid.Row="1"
-                      ItemsSource="{Binding Pedidos}"
+                      ItemsSource="{Binding PedidosFiltrados}"
                       AutoGenerateColumns="False"
                       IsReadOnly="True"
                       Name="datagridPed"
                       SelectedItem="{Binding PedidosSelecionado}" SelectionMode="Single" HorizontalAlignment="Left" Width="292">
                 <DataGrid.Columns>
-                    <DataGridTextColumn Header="Valor total" Binding="{Binding Id}"/>
-                    <DataGridTextColumn Header="Status" Binding="{Binding Id}"/>
+                    <DataGridTextColumn Header="Id" Binding="{Binding Id}"/>
+                    <DataGridTextColumn Header="Valor total" Binding="{Binding ValorTotal}"/>
+                    <!--<DataGridTextColumn Header="Status" Binding="{Binding Id}"/>
                     <DataGridTextColumn Header="Data venda" Binding="{Binding Id}"/>
-                    <DataGridTextColumn Header="Forma pagamento" Binding="{Binding Id}"/>
+                    <DataGridTextColumn Header="Forma pagamento" Binding="{Binding Id}"/>-->
                 </DataGrid.Columns>
             </DataGrid>
             <StackPanel Grid.Column="1" Grid.Row="1" Orientation="Horizontal" Margin="0,260,31,146">
