--- a/MVVM/View/CadastrarPessoa.xaml
+++ b/MVVM/View/CadastrarPessoa.xaml
@@ -72,12 +72,12 @@
                     </i:Interaction.Triggers>
                 </DataGrid>
             </ScrollViewer>
-            <DataGrid Grid.Column="1" Margin="0,146,0,214" Grid.Row="1"
+            <DataGrid Grid.Column="1" Margin="2,222,0,114" Grid.Row="1"
                       ItemsSource="{Binding PedidosFiltrados}"
                       AutoGenerateColumns="False"
                       IsReadOnly="True"
                       Name="datagridPed"
-                      SelectedItem="{Binding PedidosSelecionado}" SelectionMode="Single" HorizontalAlignment="Left" Width="292">
+                      SelectedItem="{Binding PedidosSelecionado}" SelectionMode="Single" HorizontalAlignment="Left" Width="299">
                 <DataGrid.Columns>
 
                     <DataGridTextColumn Header="Id" Binding="{Binding Id}"/>
@@ -114,7 +114,7 @@
                         Command="{Binding NovoPedido}"
                         Content="Novo Pedido" Background="#FF4DCF5F"/>
             </StackPanel>
-            <StackPanel Grid.Row="1" Orientation="Horizontal" Margin="6,335,57,71" Grid.Column="1">
+            <StackPanel Grid.Row="1" Orientation="Horizontal" Margin="337,351,-2,55" Grid.ColumnSpan="2">
                 <Button Margin="5,19,0,19"
                     Width="63" 
                     Height="30"
