--- a/MVVM/View/CadastrarPessoa.xaml
+++ b/MVVM/View/CadastrarPessoa.xaml
@@ -7,10 +7,10 @@
              xmlns:local="clr-namespace:WpfApp3.MVVM.View"
              mc:Ignorable="d" d:DesignWidth="800" Height="532">
     <StackPanel Margin="20">
-        <Grid Margin="0,0,10,0">
+        <Grid Margin="0,0,10,0" RenderTransformOrigin="0.477,0.501">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition/>
-                <ColumnDefinition/>
+                <ColumnDefinition Width="349*"/>
+                <ColumnDefinition Width="401*"/>
             </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
                 <RowDefinition/>
@@ -34,7 +34,7 @@
                         Content="Cadastrar" Background="#FF62C162"
                        />
                 </StackPanel>
-              
+
             </StackPanel>
 
             <StackPanel Grid.Column="1" Grid.Row="0" Orientation="Horizontal">
@@ -54,10 +54,10 @@
                       AutoGenerateColumns="False"
                       IsReadOnly="True"
                           Height="136"
-                          Width="292"
+                          Width="325"
                       Name="datagridPessoas"
                       SelectedItem="{Binding PessoasSelecionado}"
-                          SelectionMode="Single" >
+                          SelectionMode="Single" SelectionChanged="DatagridPessoas_SelectionChanged" >
                     <DataGrid.Columns>
                         <DataGridTextColumn Header="Id" Binding="{Binding Id}"/>
                         <DataGridTextColumn Header="Nome" Binding="{Binding Nome}"/>
@@ -73,15 +73,13 @@
                     </i:Interaction.Triggers>
                 </DataGrid>
             </ScrollViewer>
-            <DataGrid Grid.Column="1" Margin="2,222,0,114" Grid.Row="1"
+            <DataGrid Margin="1,215,10,123" Grid.Row="1"
                       ItemsSource="{Binding PedidosFiltrados}"
                       AutoGenerateColumns="False"
-                      Height="136"
-                      Width="320"
                       IsReadOnly="True"
                       Name="datagridPed"
-                      SelectedItem="{Binding PedidosSelecionado}" SelectionMode="Single" HorizontalAlignment="Left">
-              
+                      SelectedItem="{Binding PedidosSelecionado}" SelectionMode="Single" Grid.Column="1">
+
                 <DataGrid.Columns>
 
                     <DataGridTextColumn Header="Id" Binding="{Binding Id}"/>
@@ -89,7 +87,7 @@
                     <DataGridTextColumn Header="Data venda" Binding="{Binding DataVenda}"/>
                     <DataGridTextColumn Header="Forma pagamento" Binding="{Binding FormaPagamentoPedido}"/>
                     <DataGridTextColumn Header="Status" Binding="{Binding StatusPedido}"/>
-                    
+
                 </DataGrid.Columns>
             </DataGrid>
             <StackPanel Grid.Row="1" Orientation="Horizontal" Margin="1,131,30,275" Grid.Column="1">
@@ -118,8 +116,8 @@
                         Command="{Binding NovoPedido}"
                         Content="Novo Pedido" Background="#FF4DCF5F"/>
             </StackPanel>
-            <StackPanel Grid.Row="1" Orientation="Horizontal" Margin="337,351,-2,55" Grid.ColumnSpan="2">
-                <Button Margin="5,19,0,19"
+            <StackPanel Grid.Row="1" Orientation="Horizontal" Margin="337,342,-2,64" Grid.ColumnSpan="2">
+                <Button Margin="2,19,0,19"
                     Width="63" 
                     Height="30"
                     Padding="3"
@@ -129,7 +127,7 @@
                     Content="Entregues" Background="#FF4DCF5F"
                     ToolTip="Filtrar Pedidos Entregues"
                         />
-                <Button Margin="10,19,0,19"
+                <Button Margin="5,19,0,19"
                     Width="80" 
                     Height="30" 
                     Padding="3" 
@@ -139,7 +137,7 @@
                     Content="Aguardando" Background="#FFE68282"
                     ToolTip="Filtrar Pedidos Aguardando"
                         />
-                <Button Margin="10 0 0 0"
+                <Button Margin="5 0 0 0"
                     Width="85" 
                     Height="30" 
                     Padding="3" 
