Alterando as nomenclaturas das pastas e arquivos.

--- a/App.xaml
+++ b/App.xaml
@@ -14,7 +14,7 @@
             <DataTemplate DataType="{x:Type viewModel:ProdutoViewModel}">
                 <view:CadastroProduto/>
             </DataTemplate>
-            <DataTemplate DataType="{x:Type viewModel:CadastroPessoaViewModel}">
+            <DataTemplate DataType="{x:Type viewModel:PessoaViewModel}">
                 <view:CadastrarPessoa/>
             </DataTemplate>
             <DataTemplate DataType="{x:Type viewModel:PedidoViewModel}">
