--- a/MVVM/View/CadastrarPessoa.xaml
+++ b/MVVM/View/CadastrarPessoa.xaml
@@ -57,7 +57,7 @@
                           Width="325"
                       Name="datagridPessoas"
                       SelectedItem="{Binding PessoasSelecionado}"
-                          SelectionMode="Single" SelectionChanged="DatagridPessoas_SelectionChanged" >
+                          SelectionMode="Single" >
                     <DataGrid.Columns>
                         <DataGridTextColumn Header="Id" Binding="{Binding Id}"/>
                         <DataGridTextColumn Header="Nome" Binding="{Binding Nome}"/>
