--- a/MVVM/View/CadastroProduto.xaml
+++ b/MVVM/View/CadastroProduto.xaml
@@ -76,17 +76,17 @@
 
             </ScrollViewer>
             <StackPanel Grid.Column="1" Margin="175,285,10,-30" Grid.Row="1" >
-                <Button Margin="10,3,42,3" Padding="3" 
+                <Button Margin="10,3,0,3" Padding="3" 
                         CommandParameter="{Binding}"
                         Command="{Binding Deletar}"
-                        Content="Deletar" Background="#FFC54242" RenderTransformOrigin="0.65,0.542"/>
+                        Content="Deletar" Background="#FFC54242" RenderTransformOrigin="0.65,0.542" HorizontalAlignment="Left" Width="143"/>
             </StackPanel>
             <StackPanel Margin="1,285,200,-30" Grid.Row="1" Grid.Column="1">
-                <Button Margin="18,3,16,3"
+                <Button Margin="18,3,0,3"
                         Padding="3"
                         CommandParameter="{Binding}"
                         Command="{Binding Editar}"
-                        Content="Editar" RenderTransformOrigin="0.5,0.5" Height="24" Background="#FF5F64CB"/>
+                        Content="Editar" RenderTransformOrigin="0.5,0.5" Height="24" Background="#FF5F64CB" HorizontalAlignment="Left" Width="145"/>
             </StackPanel>
         </Grid>
     </StackPanel>
