--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -6,10 +6,10 @@
         xmlns:local="clr-namespace:WpfApp3"
         xmlns:viewModel="clr-namespace:WpfApp3.MVVM.ViewModel"
         mc:Ignorable="d"
-        Title="MainWindow" Height="600" Width="900"
-        ResizeMode="NoResize"
+        Title="MainWindow" Height="800" Width="900"
+        ResizeMode="CanResizeWithGrip"
         Background="Transparent"
-        WindowStyle="SingleBorderWindow">
+        WindowStyle="SingleBorderWindow" WindowStartupLocation="CenterScreen">
 
     <Window.DataContext>
         <viewModel:MainViewModel/>
