--- a/App.xaml
+++ b/App.xaml
@@ -18,7 +18,7 @@
                 <view:CadastrarPessoa/>
             </DataTemplate>
             <DataTemplate DataType="{x:Type viewModel:PedidoViewModel}">
-                <view:PedidoView/>
+                <view:CadastrarPedido/>
             </DataTemplate>
         </ResourceDictionary>
     </Application.Resources>
