--- a/MVVM/View/PedidoView.xaml
+++ b/MVVM/View/PedidoView.xaml
@@ -1,85 +1,67 @@
-﻿<UserControl x:Class="WpfApp3.MVVM.View.PedidoView"
+﻿<UserControl x:Class="WpfApp3.MVVM.View.CadastrarPedido"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
              xmlns:local="clr-namespace:WpfApp3.MVVM.View"
-             mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
-    <StackPanel Margin="20">
-        <Grid>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition/>
-                <ColumnDefinition/>
-            </Grid.ColumnDefinitions>
-            <Grid.RowDefinitions>
-                <RowDefinition/>
-                <RowDefinition/>
-            </Grid.RowDefinitions>
-            <StackPanel Grid.Column="0" Grid.Row="1" Margin="6" Orientation="Vertical">
-                <Label Content="Nome do Produto" />
-                <TextBox Text="{Binding ProdutoEdit.Nome}" Name="nomeProduto" Width="250" Height="20" HorizontalAlignment="Left" Margin="0,0,0,20"/>
-                <Label Content="Codigo do Produto" />
-                <TextBox Text="{Binding ProdutoEdit.Codigo}" Name="codigoProduto" Width="250" Height="20" HorizontalAlignment="Left" Margin="0,0,0,20"/>
-                <Label Content="Valor do Produto" />
-                <TextBox Text="{Binding ProdutoEdit.Valor}" Name="valorProduto" Width="250" Height="20" HorizontalAlignment="Left" Margin="0,0,0,20"/>
-                <Button Width="150" 
-                        Height="50"
-                        Margin="0,0,0,0"
-                        Cursor="Hand"
-                        CommandParameter="{Binding}"
-                        Command="{Binding Novo}">
-                    <Button.Background>
-                        <LinearGradientBrush StartPoint="0,0" EndPoint="1,2">
-                            <GradientStop Color="#FF5BFF5B" Offset="0.0"/>
-                            <GradientStop Color="#FF00B400" Offset="1"/>
-                        </LinearGradientBrush>
-                    </Button.Background>
-                    <Button.Clip>
-                        <RectangleGeometry 
-                            RadiusX="10" 
-                            RadiusY="10"
-                            Rect="0,0,150,50"/>
-                    </Button.Clip>
-                    <Grid>
-                        <StackPanel>
-                            <TextBlock Text="Incluir"
-                                   Foreground="White"
-                                   FontSize="28"
-                                   Margin="5,5,5,5"
-                                   HorizontalAlignment="Center"/>
-                        </StackPanel>
-                    </Grid>
-                </Button>
-            </StackPanel>
+             xmlns:viewModel="clr-namespace:WpfApp3.MVVM.ViewModel"
+             xmlns:model="clr-namespace:WpfApp3.MVVM.Model"
+             mc:Ignorable="d" d:DesignWidth="800" Height="524">
 
-            <StackPanel Grid.Column="1" Grid.Row="0" Orientation="Horizontal">
-                <Button Margin="3"
-                        Padding="3"
-                        CommandParameter="{Binding}"
-                        Command="{Binding Editar}"
-                        Content="Editar"/>
-                <Button Margin="3" Padding="3" 
-                        CommandParameter="{Binding}"
-                        Command="{Binding Deletar}"
-                        Content="Deletar"/>
+    <StackPanel Margin="20,20,20,35">
+        <Grid Height="207">
+            <StackPanel Margin="47,14,10,169" Orientation="Horizontal">
+                <TextBox Text="" IsReadOnly="True" x:Name="idPessoa" Height="24" Width="48"/>
+                <TextBox Text="" IsReadOnly="True" x:Name="nomePessoa" Height="24" Width="214"/>
+                <TextBox Text="" IsReadOnly="True" x:Name="enderecoPessoa" Height="24" Width="165"/>
+                <TextBox Text="" IsReadOnly="True" x:Name="cpfPessoa" Height="24" Width="202"/>
             </StackPanel>
-            <ScrollViewer Grid.Column="1" Grid.Row="1"
-                      HorizontalScrollBarVisibility="Hidden"
-                      VerticalScrollBarVisibility="Visible">
-                <DataGrid ItemsSource="{Binding Produtos}"
-                                AutoGenerateColumns="False"
-                                IsReadOnly="True"
-                                Name="datagridProdutos"
-                                SelectedItem="{Binding ProdutoSelecionado}">
-                    <DataGrid.Columns>
-                        <DataGridTextColumn Header="Id" Binding="{Binding Id}"/>
-                        <DataGridTextColumn Header="Nome" Binding="{Binding Nome}"/>
-                        <DataGridTextColumn Header="Codigo" Binding="{Binding Codigo}"/>
-                        <DataGridTextColumn Header="Valor" Binding="{Binding Valor}"/>
-                    </DataGrid.Columns>
-                </DataGrid>
-            </ScrollViewer>
+            <Button Content="Selecionar Cliente" x:Name="pesquisarPessoas" Click="Button_Click"  Margin="314,43,178,142"/>
+            <Button Content="Adicionar Produtos" x:Name="abrirCatalogo" Click="Button_Click2" Margin="314,98,178,87"/>
+
+
+            <Button
+                        Margin="314,70,178,115"
+                        Padding="3"
+                        Cursor="Hand"
+                        RenderTransformOrigin="0.5,0.5"
+                        CommandParameter="{Binding}"
+                        Command="{Binding Novo}"
+                        Content="Finalizar" Background="#FF4CD64C" />
+            <Grid Margin="70,120,60,-254">
+
+                <ScrollViewer
+                    HorizontalScrollBarVisibility="Hidden"
+                    VerticalScrollBarVisibility="Visible">
+                    <DataGrid ItemsSource="{Binding ''}"
+                        AutoGenerateColumns="False"
+                        IsReadOnly="False"
+                        x:Name="datagridNovoPedidos"
+                        SelectedItem="{Binding ItemSelecionado}" Width="460" Height="182">
+                        <DataGrid.CellStyle>
+                            <Style TargetType="{x:Type DataGridCell}" >
+                                <Style.Triggers>
+                                    <Trigger Property="IsSelected" Value="True">
+                                        <Setter Property="Background" Value="SeaGreen"/>
+                                    </Trigger>
+                                </Style.Triggers>
+                            </Style>
+                        </DataGrid.CellStyle>
+                        <DataGrid.Columns>
+                            <DataGridTextColumn Header="Id" Binding="{Binding Quantidade}"/>
+                            <DataGridTextColumn Header="Nome" Binding="{Binding Produto.Nome}" Width="150"/>
+                            <DataGridTextColumn Header="Valor Unitario" Binding="{Binding Produto.Valor}" Width="150"/>
+                            <DataGridTextColumn Header="Valor Total" Binding="{Binding Valor}" Width="150"/>
+                        </DataGrid.Columns>
+
+                    </DataGrid>
+
+                </ScrollViewer>
+
+            </Grid>
+            <Label Content="" Name="totalDoPedido" HorizontalAlignment="Left" Margin="70,92,0,0" VerticalAlignment="Top" Width="135"/>
+
         </Grid>
     </StackPanel>
 </UserControl>
